--- a/_layouts/about.html
+++ b/_layouts/about.html
@@ -45,16 +45,16 @@ organiser: "Lucas Gatsas"
 			<div class="cover-content">
 				<div class="inner">
 					<div class="post-count"></div>
-					<h1 class="page-title">{{ site.title }} </h1>
+					<h1 class="page-title">효로댕댕</h1>
 
 				
 					<p>    
-                            <img src="http://127.0.0.1:8000/assets/img/avatar@2x.png" alt="Jane Doe" class="author-avatar" />
+                            <img src="/img/A1307150065585.jpg" alt="hyo" class="author-avatar" />
                         </p>
-					<p class="page-description">Your Text about your and so on!</p>
+					<p class="page-description">용인에 사는 개발자입니다. 헤헤헤헤헤</p>
 					<p class="author-links">
-						<span class="author-location"><i class="icon-map-marker" aria-hidden="true"></i> St. Gallen, Switzerland</span>
-						<span class="author-website"><i class="icon-chain" aria-hidden="true"></i> <a href="http://www.lucasgatsas.ch" target="_blank">http://www.lucasgatsas.ch</a></span>
+						<span class="author-location"><i class="icon-map-marker" aria-hidden="true"></i></span>
+						<span class="author-website"><i class="icon-chain" aria-hidden="true"></i> <a href="http://www.lucasgatsas.ch" target="_blank"></a></span>
 					</p>
 				</div><!-- .inner -->
 			</div><!-- .cover-content -->
