--- a/assets/css/style-v=cba79c2df0.css
+++ b/assets/css/style-v=cba79c2df0.css
@@ -37,10 +37,10 @@
  */
 
 /* Google Font Open Sans | customize here : https://fonts.google.com/specimen/Open+Sans?selection.family=Open+Sans:300,400,600,700,800; */ 
-@import url('https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700,800');
+@import url('https://fonts.googleapis.com/css?family=Gothic+A1:100,200,300,400,500,600,700,800,900&display=swap');
 
 @font-face {
-	font-family: 'fontawesome';
+	font-family: 'Gothic A1', sans-serif;
 	src:url('../fonts/fontawesome-3gkiod.eot');
 	src:url('../fonts/fontawesome-3gkiod.eot#iefix') format('embedded-opentype'),
 		url('../fonts/fontawesome-3gkiod.ttf') format('truetype'),
@@ -1510,6 +1510,7 @@ pre .storage {
 }
 
 .page-description {
+	margin: 20px;
 	font-size: 18px;
 	font-style: normal;
 }
@@ -1906,7 +1907,7 @@ pre .storage {
 
 @media only screen and (min-width: 1400px) {
 	h1 {
-		font-size: 48px;
+		font-size: 20px;
 	}
 
 	h2 {
